--- a/Abp.AppFactory.AsyncCrudAppServiceBase/Abp.AppFactory.AsyncCrudAppServiceBase.csproj
+++ b/Abp.AppFactory.AsyncCrudAppServiceBase/Abp.AppFactory.AsyncCrudAppServiceBase.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abp.AppFactory.Interfaces" Version="1.3.0" />
     <PackageReference Include="Abp.AspNetCore" Version="3.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.3" />
   </ItemGroup>
