--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Abp.AppFactory.AsyncCrudAppServiceBase/v15
+/Abp.AppFactory.AsyncCrudAppServiceBase/bin/Debug/netcoreapp2.1
+/Abp.AppFactory.AsyncCrudAppServiceBase/obj
