--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/Abp.AppFactory.AsyncCrudAppServiceBase/v15
 /Abp.AppFactory.AsyncCrudAppServiceBase/bin/Debug/netcoreapp2.1
 /Abp.AppFactory.AsyncCrudAppServiceBase/obj
+/Abp.AppFactory.AsyncCrudAppServiceBase/bin
