Add sync comments/docs

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Abp.AppFactory.AsyncCrudAppServiceBase/bin/Debug/netcoreapp2.1
 /Abp.AppFactory.AsyncCrudAppServiceBase/obj
 /Abp.AppFactory.AsyncCrudAppServiceBase/bin
+/.vs/Abp.AppFactory.AsyncCrudAppServiceBase/DesignTimeBuild/.dtbcache
